src/test/deca/syntax/valid/FloatHexa.deca
{
    float x = 0x53.FP0;
}