src/test/deca/syntax/invalid/EntierTropGros.deca
{
    float x = 111111111111111111111111111111111111111111111111111111;
}